# FATC

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  FAT.sln  FAT.vcxproj  FAT.vcxproj.filters  Virtual_Disk  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  filesys.c  filesys.h  shell.c
